Fixed the Footer button alignment. Added some extra margin to the bottom of the Email submit button.

--- a/src/components/sass/Emailer.scss
+++ b/src/components/sass/Emailer.scss
@@ -4,7 +4,7 @@
 	border-radius: 10px;
 	padding: 10px;
 	margin-top: 15px;
-	margin-bottom: 20px;
+	margin-bottom: 40px;
 	background: #364156;
 	color: #e56b6f;
 	font-weight: bold;
